--- a/Resources/translations/sub_items.en.xliff
+++ b/Resources/translations/sub_items.en.xliff
@@ -16,10 +16,10 @@
         <target state="new">%notDeletedCount% of the %totalCount% selected item(s) could not be deleted because you do not have proper user permissions. {{ moreInformationLink }} Please contact your Administrator to obtain permissions.</target>
         <note>key: bulk_delete.error.message.users</note>
       </trans-unit>
-      <trans-unit id="c3f2bf22bf0b872db5fb4956795d3126c7b20d09" resname="bulk_delete.error.message.users_and_nonusers">
+      <trans-unit id="a873d91c27d787399ce6dfe9a96c4541e718bacf" resname="bulk_delete.error.message.users_with_nonusers">
         <source>%notDeletedCount% of the %totalCount% selected item(s) could not be deleted or sent to trash because you do not have proper user permissions. {{ moreInformationLink }} Please contact your Administrator to obtain permissions.</source>
         <target state="new">%notDeletedCount% of the %totalCount% selected item(s) could not be deleted or sent to trash because you do not have proper user permissions. {{ moreInformationLink }} Please contact your Administrator to obtain permissions.</target>
-        <note>key: bulk_delete.error.message.users_and_nonusers</note>
+        <note>key: bulk_delete.error.message.users_with_nonusers</note>
       </trans-unit>
       <trans-unit id="237dbc61da0079a4ad224512ef0678262f224ad9" resname="bulk_delete.error.modal.table_title.nonusers">
         <source>Content item(s) cannot be sent to trash (%itemsCount%)</source>
@@ -31,10 +31,10 @@
         <target state="new">User(s) cannot be deleted (%itemsCount%)</target>
         <note>key: bulk_delete.error.modal.table_title.users</note>
       </trans-unit>
-      <trans-unit id="8dd3751c17a9e91f2e08a84c1e076ef833f1d9d5" resname="bulk_delete.error.modal.table_title.users_and_nonusers">
+      <trans-unit id="eb45209c9bfb54c01fe8e827d04058c301fc8173" resname="bulk_delete.error.modal.table_title.users_with_nonusers">
         <source>Content item(s) cannot be deleted or sent to trash (%itemsCount%)</source>
         <target state="new">Content item(s) cannot be deleted or sent to trash (%itemsCount%)</target>
-        <note>key: bulk_delete.error.modal.table_title.users_and_nonusers</note>
+        <note>key: bulk_delete.error.modal.table_title.users_with_nonusers</note>
       </trans-unit>
       <trans-unit id="c1ffafa700d4b0ba80a626363f9dfe853571e080" resname="bulk_delete.error.more_info">
         <source><![CDATA[<u><a class='ez-notification-btn ez-notification-btn--show-modal'>Click here for more information.</a></u><br>]]></source>
@@ -46,10 +46,15 @@
         <target state="new">Cancel</target>
         <note>key: bulk_delete.popup.cancel</note>
       </trans-unit>
-      <trans-unit id="a668a561527cc0e3e2c7952fbf300558d9d4f877" resname="bulk_delete.popup.confirm">
+      <trans-unit id="530f5b1097af7206fdabc3a51ac334c933ab4909" resname="bulk_delete.popup.confirm.nonusers">
+        <source>Send to trash</source>
+        <target state="new">Send to trash</target>
+        <note>key: bulk_delete.popup.confirm.nonusers</note>
+      </trans-unit>
+      <trans-unit id="4953b415cbb1e81833664d96e7051d0a7e3d90c8" resname="bulk_delete.popup.confirm.users_and_users_with_nonusers">
         <source>Delete</source>
         <target state="new">Delete</target>
-        <note>key: bulk_delete.popup.confirm</note>
+        <note>key: bulk_delete.popup.confirm.users_and_users_with_nonusers</note>
       </trans-unit>
       <trans-unit id="e98d09770399a6f52a15068a0573a18fc2b0b60d" resname="bulk_delete.popup.message.nonusers">
         <source>Are you sure you want to send the selected content item(s) to trash?</source>
@@ -61,10 +66,10 @@
         <target state="new">Are you sure you want to delete the selected user(s)?</target>
         <note>key: bulk_delete.popup.message.users</note>
       </trans-unit>
-      <trans-unit id="2cdb743eef9079753dcad70ba92907bff413ceb0" resname="bulk_delete.popup.message.users_and_nonusers">
+      <trans-unit id="a12f451cc6ee1e65a14e4accacba2fff815a67f9" resname="bulk_delete.popup.message.users_with_nonusers">
         <source>Are you sure you want to delete the selected user(s) and send the other selected content item(s) to trash?</source>
         <target state="new">Are you sure you want to delete the selected user(s) and send the other selected content item(s) to trash?</target>
-        <note>key: bulk_delete.popup.message.users_and_nonusers</note>
+        <note>key: bulk_delete.popup.message.users_with_nonusers</note>
       </trans-unit>
       <trans-unit id="5464e305b394648af0e9dbd86bfd0ea5df8ed93c" resname="bulk_delete.success.message.nonusers">
         <source>The selected content item(s) have been sent to trash.</source>
@@ -76,10 +81,10 @@
         <target state="new">The selected user(s) have been deleted.</target>
         <note>key: bulk_delete.success.message.users</note>
       </trans-unit>
-      <trans-unit id="9dbc5bc653c7208250728d6d8307b67cd155bb14" resname="bulk_delete.success.message.users_and_nonusers">
+      <trans-unit id="93704c823e9663af7f4a89ec041673ce9d095a17" resname="bulk_delete.success.message.users_with_nonusers">
         <source>The selected content item(s) have been sent to trash and the selected user(s) have been deleted.</source>
         <target state="new">The selected content item(s) have been sent to trash and the selected user(s) have been deleted.</target>
-        <note>key: bulk_delete.success.message.users_and_nonusers</note>
+        <note>key: bulk_delete.success.message.users_with_nonusers</note>
       </trans-unit>
       <trans-unit id="364a3498e021163497d9110380736b876beb326f" resname="bulk_move.error.message">
         <source>%notMovedCount% of the %totalCount% selected item(s) could not be moved because you do not have proper user permissions. {{ moreInformationLink }} Please contact your Administrator to obtain permissions.</source>
